[gd_scene load_steps=10 format=3 uid="uid://ccv22yjcs4wwg"]

[ext_resource type="Script" path="res://scripts/Die.gd" id="1_e7clt"]
[ext_resource type="PackedScene" uid="uid://duoup8q6bfpsc" path="res://mesh/die.glb" id="1_uykal"]
[ext_resource type="Theme" uid="uid://bjoabmskqtboa" path="res://MainTheme.tres" id="3_ey8ya"]
[ext_resource type="Shader" path="res://shaders/backgroundblur.gdshader" id="4_r0fok"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1dube"]
shader = ExtResource("4_r0fok")
shader_param/blur_lod = 2.0
shader_param/blur_rad = 4

[sub_resource type="Animation" id="Animation_i4bc0"]
resource_name = "ChangeSteps"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/StepsHUD/StepsIndicator/StepCount:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [60, 100, 60]
}

[sub_resource type="Animation" id="Animation_edeq7"]
resource_name = "FadeInEndScreen"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/EndingHUD:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/EndingHUD:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kd8ms"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/StepsHUD/StepsIndicator/StepCount:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [60]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/EndingHUD:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/EndingHUD:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_52ibk"]
_data = {
"ChangeSteps": SubResource("Animation_i4bc0"),
"FadeInEndScreen": SubResource("Animation_edeq7"),
"RESET": SubResource("Animation_kd8ms")
}

[node name="Die" type="Node3D"]
script = ExtResource("1_e7clt")

[node name="die" parent="." instance=ExtResource("1_uykal")]
unique_name_in_owner = true

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, -1.49012e-08, 1.49012e-08, -4.90019e-16, 0.5, 0.866026, 1.6935e-16, -0.866026, 0.5, 0, 0, 0)
collision_mask = 0
spring_length = 16.0

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
current = true

[node name="HUD" type="CanvasLayer" parent="."]
process_mode = 3

[node name="StepsHUD" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3_ey8ya")

[node name="StepsIndicator" type="HBoxContainer" parent="HUD/StepsHUD"]
layout_direction = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -144.0
offset_right = 320.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
metadata/_edit_layout_mode = 1

[node name="Label" type="Label" parent="HUD/StepsHUD/StepsIndicator"]
offset_top = 36.0
offset_right = 187.0
offset_bottom = 107.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 60
text = "Steps: "
vertical_alignment = 1

[node name="StepCount" type="Label" parent="HUD/StepsHUD/StepsIndicator"]
unique_name_in_owner = true
offset_left = 191.0
offset_top = 36.0
offset_right = 224.0
offset_bottom = 107.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 60
text = "0
"
vertical_alignment = 1

[node name="EndingHUD" type="Control" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3_ey8ya")

[node name="ColorRect" type="ColorRect" parent="HUD/EndingHUD"]
material = SubResource("ShaderMaterial_1dube")
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="HUD/EndingHUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.5
offset_top = -168.0
offset_right = 385.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 22
theme_override_font_sizes/font_size = 100
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_layout_mode = 1

[node name="MovesTaken" type="Label" parent="HUD/EndingHUD"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -19.0
offset_right = 320.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Moves Taken:"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/EndingHUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 56.0
offset_right = 166.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1
metadata/_edit_layout_mode = 1

[node name="QuitButton" type="Button" parent="HUD/EndingHUD/HBoxContainer"]
offset_right = 192.0
offset_bottom = 43.0
text = "Back to Menu"

[node name="RestartLevelButton" type="Button" parent="HUD/EndingHUD/HBoxContainer"]
offset_left = 256.0
offset_right = 440.0
offset_bottom = 43.0
text = "Replay Level"

[node name="NextLevelButton" type="Button" parent="HUD/EndingHUD/HBoxContainer"]
unique_name_in_owner = true
offset_left = 504.0
offset_right = 655.0
offset_bottom = 43.0
text = "Next Level"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_52ibk")
}

[connection signal="pressed" from="HUD/EndingHUD/HBoxContainer/QuitButton" to="." method="back_to_menu"]
[connection signal="pressed" from="HUD/EndingHUD/HBoxContainer/RestartLevelButton" to="." method="restart_level"]
[connection signal="pressed" from="HUD/EndingHUD/HBoxContainer/NextLevelButton" to="." method="to_next_level"]
